[package]
name = "tf2-stats-influx"
version = "0.1.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rcon = "0.2.1"
influxdb = { version = "0.1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.7"
tokio = { version = "0.2.21", features = ["macros"]}
futures = "0.3"

[profile.release]
lto = true
opt-level = 'z'
