[package]
name = "tf2-stats-influx"
version = "0.1.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
rcon = "0.2.1"
regex = "1"
crossbeam = "0.7"
anyhow = "1.0"
futures = "0.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.21", features = ["macros"]}
influxdb = { version = "0.1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
opt-level = 'z'
